<resources>
    <string name="app_name">Thumb&amp;Pin</string>
    <string name="title_activity_splash_screen">Thumb&amp;Pin</string>
    <string name="thumb">
        THUMB
    </string>
    <string name="pin">
        PIN
    </string>
    <string name="action_message">Welcome to Thumb and Pin! Get started by selecting an option below</string>
    <string name="nin">NIN</string>
    <string name="choose_enro">Choose Enrollment Method</string>
    <string name="bvn">BVN\n</string>
    <string name="atm_card">ATM Card</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enrollment">Enrollment</string>
    <string name="transaction">Transaction Details</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">WELCOME</string>
    <string name="login_message">
    Enter the access code
    </string>
    <string name="access_code">Access Code</string>
    <string name="login">Login</string>
    <string name="title_activity_enrollment_choice_list">EnrollmentChoiceListActivity</string>
    <string name="back_icon">Back icon</string>
    <string name="enroll_bvn">Enroll using your Bank Verification Number (BVN) for seamless banking integration.</string>
    <string name="enroll_nin">Enroll using your National Identification Number (NIN)  for seamless banking integration.</string>
    <string name="enter_bvn">Enter BVN</string>
    <string name="proceed">Proceed</string>
    <string name="verify_text">Verify your identity using your fingerprint for seamless and secure payment activation</string>
    <string name="progress">0%</string>
    <string name="progress_done">100%</string>
    <string name="finger_scan_message">Scan your finger to verify your identity.</string>
    <string name="info_message"> Your Information has been retrieved, Kindly confirm </string>
    <string name="name_text"> Tomiwa Mariam </string>
    <string name="full_name_text"> Full Name </string>
    <string name="date_of_birth"> Date of Birth </string>
    <string name="date_of_birth_text"> 04–06–1972 </string>
    <string name="email"> Email Address </string>
    <string name="email_text"> olaniteolakean@gmail.com </string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_text">07038386817</string>
    <string name="address">Address</string>
    <string name="address_text">Abeokuta, Ogun State</string>
    <string name="choose_link"> Choose Linked Bank Account </string>
    <string name="acc_number">Acc number: 2146417782</string>
    <string name="bank_name">Bank name</string>
    <string name="account_type">Savings</string>
    <string name="enrollment_success_text">Enrollment Successful</string>
    <string name="enrollment_congrats">Congratulations! Your enrollment has been successfully completed.</string>
    <string name="enrollment_number">Enrollment ID : 238438549</string>
    <string name="go_to_home">Go To Home</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="link_accounts">Link Accounts</string>
    <string name="enter_nin">Enter NIN</string>
    <string name="virtual_acc">Virtual Account Details</string>
    <string name="account_name">Account Name</string>
    <string name="account_name_text">Tomiwa Mariam</string>
    <string name="account_number">Virtual Account ID</string>
    <string name="account_number_text">123456</string>
    <string name="card_instruction">Insert your debit card and follow the prompts to link your card securely.</string>
    <string name="bank_name_text">United Bank for Africa</string>
    <string name="card_name">Card Name</string>
    <string name="card_name_text">Tomiwa Mairam</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_text">12236483975</string>
    <string name="card_type">Card Type</string>
    <string name="card_type_text">VISA</string>
    <string name="expiry">Expiry Date</string>
    <string name="expiry_text">10/24</string>
    <string name="title_activity_bvn_enrollment_activitiy">BvnEnrollmentActivitiy</string>
    <string name="fingerprint_desc">good image</string>
    <string name="bank">Bank</string>
    <string name="wallet_transfer">Wallet Transfer</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="place_finger">Place finger on scanner to authenticate</string>
    <string name="next">Next</string>
    <string name="amount_display">0.00</string>
    <string name="transaction_amount_display">Transaction Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="review_transaction_details">Review Transaction Details</string>
    <string name="amount_text">amount</string>
    <string name="text_amount">amount</string>
    <string name="amount_value">350,000</string>
    <string name="select_account">Selected Acount</string>
    <string name="change">Change</string>
    <string name="amount_payed">Payment of #5,000 confirmed</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="payment_confirmed">Payment Success!</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_ref">Ref Number</string>
    <string name="payment_status">Payment Status\n</string>
    <string name="payment_time">Payment Time</string>
    <string name="payment_total">Total Payment</string>
    <string name="share_receipt">Share Receipt</string>
    <string name="done">DONE</string>
    <string name="failed_message_1">We\'re sorry, but your transaction could not be completed</string>
    <string name="failed_message_2">Your account balance is too low to complete this transaction\n</string>
    <string name="try_again">Try again</string>
    <string name="enter_card_pin">Enter Card Pin</string>
    <string name="linked_card">Linked Card</string>
    <string name="confirm">Confirm</string>
    <string name="account_number_">Account Number</string>
</resources>