<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen" >

    <RelativeLayout
        android:id="@+id/frame_34"
        android:layout_width="306dp"
        android:layout_height="92dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="23dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/thumb"
            android:textAppearance="@style/thumb"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5sp"
            android:text="@string/pin"
            android:textAppearance="@style/pin" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="106dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/fingerprint_desc"
            android:src="@drawable/fingerprint" />
    </RelativeLayout>



</RelativeLayout>


