<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/enrollment">

    <RelativeLayout
        android:id="@+id/button_ligh"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_ligh">

        <ImageButton
            android:id="@+id/back"
            android:background="@drawable/button_ligh"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="19dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_icon" />
    </RelativeLayout>


    <TextView
        android:id="@+id/enroll_usin"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="126dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/transaction_amount_display"
        android:textAppearance="@style/enroll_usin" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_below="@+id/enroll_usin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:text="@string/enter_amount"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/frame_24"
        android:layout_width="362dp"
        android:layout_height="141dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="23dp">

        <RelativeLayout
            android:id="@+id/frame_22"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/frame_22"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/vuesax_line"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="#" />

            <EditText
                android:id="@+id/bvn"
                android:layout_width="295dp"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@+id/vuesax_line"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/amount_display"
                android:inputType="numberDecimal"
                android:textAppearance="@style/enter_bvn" />

        </RelativeLayout>

        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/red"
            android:clickable="false"
            android:text="@string/next"
            android:textAppearance="@style/proceed" />

    </RelativeLayout>


</RelativeLayout>