<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bvn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/enrollment">

    <RelativeLayout
        android:id="@+id/button_ligh"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_ligh">

        <ImageButton
            android:id="@+id/back"
            android:background="@drawable/button_ligh"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="19dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_icon" />
    </RelativeLayout>


    <TextView
        android:id="@+id/enroll_usin"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="164dp"
        android:text="@string/fingerprint_authentication"
        android:textAppearance="@style/verify_text"
        android:lineSpacingExtra="2sp"
        android:textAlignment="center" />


    <ImageView
        android:id="@+id/fingerprint_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="324dp"
        android:background="@drawable/fingerprint_frame"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        android:src="@drawable/fingerprint_scan" />

    <TextView
        android:id="@+id/scan_your_f"
        android:layout_width="253dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="591dp"
        android:text="@string/place_finger"
        android:textAppearance="@style/finger_scan_message"
        android:lineSpacingExtra="2sp"
        android:gravity="center_vertical"/>
</RelativeLayout>