<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/module"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_action">

    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="142dp"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="136dp"
        android:src="@drawable/fingerprint_dark" />

    <RelativeLayout
        android:id="@+id/frame_60579"
        android:layout_width="350dp"
        android:layout_height="336dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="33dp">
        <!-- Auto layout, variables, and unit scale are not yet supported -->

        <TextView
            android:id="@+id/login_welcome"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="45dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/welcome" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="344dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="274dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/red"
            android:textAppearance="@style/proceed"
            android:text="@string/login" />

        <EditText
            android:id="@+id/access_code"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="165dp"
            android:autofillHints=""
            android:background="@drawable/rounded_rectangle"
            android:hint="@string/access_code"
            android:inputType="text"
            android:padding="16dp" />
    </RelativeLayout>
</RelativeLayout>